# imtk

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  default.nix
include/: imconfig.h  imgui_plot.h
src/: imgui-SFML.cpp  imgui_demo_main.cpp  imgui_plot.cpp
